feat: add discovery client for service